# Retoccilus

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CodeOfConduct.md  LICENSE  LICENSES  NamingConventions.md  README.md  Roadmap.md  SystemRequirement.md  ThirdPartyLicense  ThirdParty_Licenses.md  conandata.yml  conanfile.py  main.cpp
Compiler/LexicalAnalyzer/: Rtcc_Lex.h
Compiler/Utils/: FileEntry.h  TokenType.h
Compiler/Utils/AbstractDataType/: DenseMapInfo.h  Hashing.h  PointerUnionX.h  StringMap.h  StringReference.h
Compiler/Utils/Basic/: CompilerReference.h  CustomizableOptional.h  DirectoryEntrance.h
Compiler/Utils/SpUtils/: AlignOf.h  Compiler.h  DataTypes.h  ErrorHandling.h  ErrorX.h  SwapByteOrder.h  type_trait.h
Compiler/Utils/SpUtils/File/: UniqueID.h
Configuration/RCodeEditor/KeywordList/: cppKeywords.xml
Core/SceneWidget/: CMakeLists.txt
Core/SceneWidget/Rt2DSceneWidget/: Rt2DSceneWidget.cpp  Rt2DSceneWidget.h
Core/VulkanWrapper/: CMakeLists.txt  VulkanWrapper.cpp  VulkanWrapper.h
Core/VulkanWrapper/shaders/: sprite.frag  sprite.vert
Documentation/source/: conf.py
Documentation/source/RCodeEditor_APIs/: RCodeEditorFunc.rst
Parser/Cpp/: Tokenizer.h
Parser/utils/: ParserUtils.h
Resources/: Resources.qrc
Resources/Configuration/RCodeEditor/ColorThemes/: Dracula.xml
Resources/Configuration/RCodeEditor/KeywordList/: cppKeywords.xml  doxygenTags.xml
Resources/ExampleProgram/: Example.cpp  Example.html  Example.py  ExampleStyle.css
Resources/RCodeEditor_UI/: RCodeEditorUIHandler.qml
Resources/Shaders/: shader.frag  shader.vert
Resources/UIs/RCodeEditor_UI/: RCodeEditorUIHandler.qml
Source/Engine/: CMakeLists.txt
Source/Engine/3D-Support/: SpecialThanks
Source/Engine/3D-Support/Model-Importer/: CMakeLists.txt
Source/Engine/3D-Support/Model-Importer/include/: model-importer-base.h
Source/Engine/3D-Support/Model-Importer/src/: fbx-importer.cpp
Source/Engine/3D-Support/Model-Importer/utils/Types/: Mesh.cpp  Mesh.h  Vertex.h
Source/Engine/3D-Support/PublicAPI/: Public3DApi.cpp
Source/Engine/3D-Support/Utility/: Definition.h  Math.h
Source/Engine/3D-Support/Utility/Math/: Matrix3x3.h  Matrix3x3.inl  Matrix4x4.h  Matrix4x4.inl  Quaternion.h  Quaternion.inl  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl
Source/Engine/3D-Support/Utility/Scene/: RtMetadata.h  RtNode.h  RtScene.cpp  RtScene.h
Source/Engine3D/ModelImporter/: LICENSE-ASSIMP  README
Source/Engine3D/ModelImporter/Utility/Container/: ColorRGBA.h  ColorRGBA.inl  Matrix3x3.cpp  Matrix3x3.h  Matrix3x3.inl  Matrix4x4.cpp  Matrix4x4.h  Matrix4x4.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Vector2D.h  Vector2D.inl  Vector3D.h  Vector3D.inl
Source/Engine3D/ModelImporter/Utility/ModelData/: Mesh.h  Metadata.h  Scene.h
Source/Engine3D/ModelImporter/Utility/RetoMIString/: RetoMIString.cpp  RetoMIString.h
Source/Engine3D/ModelImporter/Utility/Tools/: AxisAlignedBoundingBox.h  Magic_Numbers.h  RetoMIString.cpp  RetoMIString.h
Source/Engine3D/SceneWidget/: SceneWidget.cpp  SceneWidget.h
Sources/: RDefs.h
Sources/Global/: SimpleIni.h  charset_info.h  qt_lib_utils.h  utils.h
Sources/MainWindow/: rmainwindow.cpp  rmainwindow.h  rmainwindow.ui  ui_rmainwindow.h
Sources/RCodeEditor/: LineNumberArea.h  RBorderTextProperty.h  RCFamilyHighlighter.h  RCodeEditor.cpp  RCodeEditor.h  RCodeEditorSidebar.cpp  RCodeEditorSidebar.h  RHighlightRule.h  RLanguage.h  RSidebar.h  RStyleSyntaxHighlighter.h  RSyntaxHighlighter.h  RSyntaxStyle.h  foldingHandler.cpp  foldingHandler.h
Sources/RCodeEditor/Clang/: ASTGenerator.h  What.md
Sources/RCodeEditor/GlobalDef/: RCEBase.h  RCEGlobal.h
Sources/RCodeEditor/PreferenceHandle/: rcodeeditorpreferencewindow.cpp  rcodeeditorpreferencewindow.h  rcodeeditorpreferencewindow.ui  ui_rcodeeditorpreferencewindow.h
Sources/RCodeEditor_UI/: rce_ui.cpp  rce_ui.h  rce_ui.ui  retocodeeditor_uihandler.cpp  retocodeeditor_uihandler.h  retocodeeditor_uihandler.ui  ui_rce_ui.h  ui_retocodeeditor_uihandler.h
Sources/UIComponents/: RFluentNormalButton.qml
Sources/UIComponents/Imports/: RFluentUIAffactor.h  RFluentUIApplication.h  RFluentUILifeCycle.h  RFluentUIMain.h  RFluentUIRegister.h  SingletonHandle.h
Sources/UIs/CodeEditor/: rcodeeditorhandler.cpp  rcodeeditorhandler.h  rcodeeditorhandler.ui  ui_rcodeeditorhandler.h
Test/FileOperationTest/: Test_FileOperation.cpp
ThirdPartyLibraries/SARibbon/bin_qt6.6.2_GNU_x64/cmake/SARibbonBar/: SARibbonBarTargets-release.cmake
ThirdPartyLibraries/SARibbon/bin_qt6.6.2_GNU_x64/lib/cmake/SARibbonBar/: SARibbonBarTargets.cmake
Tools/VulkanGLFWValidator/: GLFWValidator.cpp  README.md  VulkanValidator.cpp
doc/: README.md  gen-doc.bat
doc/Document/English/: mkdocs.yml
doc/Document/English/docs/API Reference/Core/AbstractClasses/FileOperation/: FileOperation.md
doc/ForContributor-FunctionReference/FunctionReference/docs/EngineReference/Engine3D_Reference/ModelImporter/Utility/Container/: Vector3D.md
src/Core/AbstractClasses/SceneWidget/: AbstractSceneWidget.cpp  AbstractSceneWidget.hpp
src/Core/FileOperation/: AbstractFileOperation.hpp  FileOperation.hpp
src/Editor/SceneWidget/: SceneWidget2D.cpp  SceneWidget2D.hpp
utils/: RRegex.h  RXmlReader.h  RetoAST.h  RetoCodeEditor.h  RetoErrors.h  RetoGlobal.h
